The main form was updated

--- a/DeviceManager/DeviceManager.csproj
+++ b/DeviceManager/DeviceManager.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,8 +53,11 @@
     <Compile Include="DeviceManagerForm.Designer.cs">
       <DependentUpon>DeviceManagerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Device\PCDevice.cs" />
+    <Compile Include="Dispatcher\DeviceDispatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scanner\DeviceScanner.cs" />
     <EmbeddedResource Include="DeviceManagerForm.resx">
       <DependentUpon>DeviceManagerForm.cs</DependentUpon>
     </EmbeddedResource>
