Enable/Disable device functionality was added

--- a/DeviceManager/DeviceManager.csproj
+++ b/DeviceManager/DeviceManager.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>DeviceManagerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Device\PCDevice.cs" />
+    <Compile Include="Device\PCDeviceException.cs" />
     <Compile Include="Dispatcher\DeviceDispatcher.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
